<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/profile_toolbar"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="auto"
        app:maxImageSize="35dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/toolbar" />

                <ImageView
                    android:id="@+id/toolbar_profile"
                    android:layout_width="50dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/profile_toolbar" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/banner7" />


                <TextView
                    android:id="@+id/bannertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/banner"
                    android:layout_alignBottom="@+id/banner"
                    android:gravity="center"
                    android:text="@string/bannertext"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/txt_on_recharge"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/mobile"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_mobile" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_margin="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/Mobile"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/broadband"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_broadband" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_margin="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/broadband"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_dth" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_margin="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/dth"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey_300" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/txt_on_booking"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/bus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_bus" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_margin="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/bus"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/flight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/flight_booking_logo"
                            android:layout_width="match_parent"
                            android:layout_height="65dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="5dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_flights" />

                        <ImageView
                            android:layout_width="76dp"
                            android:layout_height="35dp"
                            android:layout_alignParentTop="true"
                            android:src="@drawable/ic_new" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/flights"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />
                    </RelativeLayout>


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="145dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/yellow"
                        android:src="@drawable/homepage_bottom_1" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="145dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/indigo"
                        android:src="@drawable/homepage_bottom_2" />


                </LinearLayout>
            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:orientation="vertical">-->

            <!--                <TextView-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/recharge_offers_text"-->
            <!--                    android:textColor="@color/colorPrimary"-->
            <!--                    android:textStyle="bold"-->
            <!--                    android:textSize="20sp"-->
            <!--                    android:padding="15dp"-->
            <!--                    android:textAlignment="center"/>-->

            <!--                <TextView-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/recharge_offers_text1"-->
            <!--                    android:textAlignment="center"-->
            <!--                    android:padding="5dp"/>-->
            <!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:padding="20dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingBottom="20dp"
                    android:text="@string/footer_copyright"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>