<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".FlightActivity">


    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lin_date_seat_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:animateLayoutChanges="true"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:baselineAligned="false"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/rel_leaving_from"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.43">

                    <TextView
                        android:id="@+id/text_leaving_from"
                        style="@style/text_floating_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:gravity="left"
                        android:text="@string/lb_leaving_from"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/text_source"
                        style="@style/booking_engine_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_leaving_from"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:gravity="left"
                        android:text="@string/lb_leaving_from"
                        android:textColor="@color/label_floating" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.14">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btn_flip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@null"
                        android:src="@drawable/ic_arrow_forward"
                        android:tint="@color/colorPrimary" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rel_going_to"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.43">

                    <TextView
                        android:id="@+id/text_going_to"
                        style="@style/text_floating_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:text="@string/lb_going_to"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/text_destination"
                        style="@style/booking_engine_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_going_to"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:gravity="right"
                        android:text="@string/lb_going_to"
                        android:textColor="@color/label_floating" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:id="@+id/div_source_destination"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_large"
                android:background="@color/divider" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large">

                <TextView
                    android:id="@+id/tv_departure"
                    style="@style/text_floating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/lb_departure" />

                <RelativeLayout
                    android:id="@+id/rel_tv_today_container"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tv_departure"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium">

                    <TextView
                        android:id="@+id/tv_today"
                        style="@style/booking_engine_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@drawable/ic_calendar"
                        android:drawablePadding="@dimen/padding_medium"
                        android:text="12 Jan' 2021" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_toRightOf="@id/rel_tv_today_container">

                    <LinearLayout
                        android:id="@+id/lin_tomorrow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="true">


                        <TextView
                            android:id="@+id/tv_tomorrow"
                            style="@style/booking_engine_text_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginRight="@dimen/margin_large"
                            android:text="@string/lb_tomorrow" />
                    </LinearLayout>


                </RelativeLayout>
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:background="@color/divider" />

            <RelativeLayout
                android:id="@+id/rel_premium_checkbox_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_header"
                android:layout_marginRight="@dimen/margin_large">

                <CheckBox
                    android:id="@+id/chk_premium_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/margin_checkbox_negative"
                    android:layout_marginTop="-2dp" />

                <TextView
                    android:id="@+id/tv_premium_only"
                    style="@style/booking_engine_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/chk_premium_only"
                    android:text="@string/lb_premium_flights_only" />

                <Spinner
                    android:id="@+id/travel_class_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />


            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/btn_find_flights"
                    style="@style/button_submit"
                    android:layout_width="match_parent"
                    android:text="@string/btn_find_flights" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:orientation="vertical">


                <TextView
                    style="@style/text_floating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:text="Ongoing offers" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="8dp" />

                <include
                    android:id="@+id/offer_coupon"
                    layout="@layout/layout_offers" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>